<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/card_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    android:background="@color/white"
    app:cardCornerRadius="8dp"
    android:elevation="8dp">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:padding="6dp"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:text="@string/txt_name"
                android:textColor="@color/light_grey"
                android:textSize="18sp"
                android:textStyle="bold"/>
        </RelativeLayout>
        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="10"
            android:padding="6dp"
            android:textStyle="normal"
            android:text="@string/txt_description"
            android:textColor="@color/light_grey"
            android:textSize="14sp"/>
        <TextView
            android:id="@+id/tv_priority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="10"
            android:padding="6dp"
            android:textStyle="normal"
            android:text="@string/txt_priority"
            android:textColor="@color/light_grey"
            android:textSize="14sp"/>
        <TextView
            android:id="@+id/tv_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="10"
            android:padding="6dp"
            android:textStyle="normal"
            android:text="@string/txt_status"
            android:textColor="@color/light_grey"
            android:textSize="14sp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:textStyle="normal"
                android:maxLines="1"
                android:padding="6dp"
                android:text="@string/txt_date"
                android:textColor="@color/light_grey"
                android:textSize="14sp"/>
            <TextView
                android:id="@+id/tv_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:textStyle="normal"
                android:maxLines="1"
                android:padding="6dp"
                android:text="@string/txt_time"
                android:textColor="@color/light_grey"
                android:textSize="14sp"/>
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>